some fixes text truncate for news added

--- a/assets/src/sass/modules/hero-section.sass
+++ b/assets/src/sass/modules/hero-section.sass
@@ -62,6 +62,7 @@
 	&.single
 		margin-bottom: 35px
 		max-height: 400px
+		min-height: 0
 		&:before
 			opacity: .5
 		.text-container
